Add diagnostic test for slow Ne4 best-move search